--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,7 @@
 // Import page-specific CSS files here.
+@import "animate.css";
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&display=swap');
+
 @import "home";
+@import "show";
+@import "new";
