--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,4 @@
 // Specific CSS for your home-page
-@import "animate.css";
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@500&display=swap');
 .home_video {
   width: 100%;
   height: 400px;
@@ -8,10 +6,9 @@
 }
 
 .watch-list {
-  margin-top: -115px;
+  margin-top: -400px;
   margin-left: auto;
   margin-right: auto;
-  border: 5px solid green;
   text-align: center;
 }
 
@@ -29,19 +26,21 @@
 }
 
 .list-cards {
-  margin-top: 45px;
+  margin-top: 325px;
   padding-left: 20px;
   padding-right: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 16px
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .list-card {
   font-size: 24px;
-  padding: 10px;
   padding-top: 75px;
-  padding-bottom: 75px;
+  margin: 25px;
+  width: 300px;
+  height: 200px;
   border-radius: 5px;
   text-align: center;
   transition: transform .2s;
@@ -50,6 +49,21 @@
 
 .list-card:hover {
   transform: scale(1.1);
-  background-color: white;
-  color: black;
 }
+
+// .list-cards {
+//   padding: 10px;
+//   width: calc((100px + (10px * 2)) * 4); /* item width + padding on either side times number of items */
+//   display: flex;
+//   flex-wrap: wrap;
+//   background: blue;
+//   margin: 10px;
+//   justify-content: center;
+// }
+
+// .list-card {
+//   width: 100px;
+//   height: 100px;
+//   background: red;
+//   margin: 10px;
+// }
