--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,8 +1,12 @@
 <%= render "shared/navbar" %>
 
-<h1>New list</h1>
+<div class="container">
+  <h1>New list</h1>
 
-<%= simple_form_for(@list) do |f| %>
-  <%= f.input :name %>
-  <%= f.submit %>
-<% end %>
+  <div class="form">
+    <%= simple_form_for(@list) do |f| %>
+      <%= f.input :name %>
+      <%= f.submit %>
+    <% end %>
+  </div>
+</div>
